--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zermatt-core",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "JS lib + utils for Zermatt.JS lib + utils for Zermatt.",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "@alpinejs/morph": "^3.14.1",
     "@alpinejs/persist": "^3.14.1",
     "alpinejs": "^3.13.7",
-    "i18next": "^23.10.1"
+    "i18next": "^23.10.1",
+    "laravel-precognition-alpine": "^0.5.11"
   }
 }
