--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zermatt-core",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "JS lib + utils for Zermatt.JS lib + utils for Zermatt.",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,10 @@
     "url": "https://github.com/maddlen/zermatt-core/issues"
   },
   "homepage": "https://github.com/maddlen/zermatt-core#readme",
+  "devDependencies": {
+    "colorette": "^2.0.20",
+    "glob": "^11.0.0"
+  },  
   "dependencies": {
     "@alpinejs/collapse": "^3.14.1",
     "@alpinejs/focus": "^3.14.1",
