--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zermatt-core",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "JS lib + utils for Zermatt.JS lib + utils for Zermatt.",
   "main": "index.js",
   "scripts": {
@@ -19,17 +19,15 @@
   "bugs": {
     "url": "https://github.com/maddlen/zermatt-core/issues"
   },
-  "homepage": "https://github.com/maddlen/zermatt-core#readme",
-  "devDependencies": {
-    "colorette": "^2.0.20",
-    "glob": "^11.0.0"
-  },  
+  "homepage": "https://github.com/maddlen/zermatt-core#readme",  
   "dependencies": {
     "@alpinejs/collapse": "^3.14.1",
     "@alpinejs/focus": "^3.14.1",
     "@alpinejs/morph": "^3.14.1",
     "@alpinejs/persist": "^3.14.1",
     "alpinejs": "^3.13.7",
+    "colorette": "^2.0.20",
+    "glob": "^11.0.0",
     "i18next": "^23.10.1",
     "laravel-precognition-alpine": "^0.5.11"
   }
