--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT",
+  "license": "MIT Non Commercial",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/maddlen/zermatt-core.git"
